[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rtk-py"
dynamic = ["version"]
description = "Python wrapper around invoking rtk (https://github.com/rtk-ai/rtk)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/markjm/rtk-py"
Upstream = "https://github.com/rtk-ai/rtk"
